pick and discord otp
